# os-conductor

./: README.md  setup.cfg  setup.py  tox.ini
etc/os_conductor/: README-os_conductor.conf.txt  os_conductor-config-generator.conf
os_conductor/: __init__.py  config.py  create-config.py  etcdconfig.py  service.py  version.py
os_conductor/cmd/: __init__.py  conductor.py
os_conductor/common/: config.py
os_conductor/conf/: __init__.py  base.py  cinder.py  cinder_server.py  glance.py  glance_server.py  neutron.py  neutron_agent.py  neutron_server.py  nova.py  nova_server.py  opts.py
os_conductor/doc/: requirements.txt
tools/: etcd-startup-config.sh  install.sh  os_conductor.service
tools/default/: etcd
tools/etcd-startup-config/: cinder_server.sh  functions.sh  glance_server.sh  global.sh  neutron_agent.sh  neutron_server.sh  nova_agent.sh  nova_compute_kvm.sh  nova_compute_xapi.sh  nova_server.sh
tools/init.d/: os_conductor
