[metadata]
name = os_conductor
summary = Cloud computing configuration centralizer
description-file = 
    README.rst
author = Samana Group LLC
author-email = fabian.baena@samanagroup.co
home-page = https://www.samanagroup.co
classifier = 
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    etc/os_conductor =
packages =
    os_conductor

[entry_points]
oslo.config.opts =
    os_conductor.conf = os_conductor.conf.opts:list_opts

oslo.config.opts.defaults =
    os_conductor.conf = os_conductor.common.config:set_middleware_defaults

oslo.policy.enforcer =
    os_conductor = os_conductor.policy:get_enforcer

oslo.policy.policies =
    # The sample policies will be ordered by entry point and then by list
    # returned from that entry point. If more control is desired split out each
    # list_rules method into a separate entry point rather than using the
    # aggregate method.
    os_conductor = os_conductor.policies:list_rules

console_scripts =
    os_conductor = os_conductor.cmd.conductor:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = os_conductor/locale
domain = os_conductor

[update_catalog]
domain = os_conductor
output_dir = os_conductor/locale
input_file = os_conductor/locale/os_conductor.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_conductor/locale/os_conductor.pot

[wheel]
universal = 1

[extras]
osprofiler =
  osprofiler>=1.4.0 # Apache-2.0
